--- a/index.html
+++ b/index.html
@@ -1,83 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Whiskey Drop | Taste a new whiskey every month!</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
+  <title>Whiskey Drop | Taste a new whiskey every month!</title>
 </head>
+
 <body>
 
-    <article class="container">
-        <!-- Callout -->
+  <article class="container">
+    <!-- Callout -->
+    <div class="row">
+      <div class="col-12">
         <section class="callout">
-            <h1>The finest whiskeys delivered to your door</h1>
-            <p class="lead">Sign up today and start recieving the world's best whikeys. <s>£19.99</s> <strong><mark>First one is free</mark></strong></p>
-            <button class="btn btn-success btn-lg">Sign Up!</button>
-            <p class="text-muted"><small>You must be over 18 to sign up for our service. Please, drink responsibly</small></p>
+          <h1>The finest whiskeys delivered to your door</h1>
+          <p class="lead">Sign up today and start recieving the world's best whikeys. <s>£19.99</s> <strong><mark>First
+                one is free</mark></strong></p>
+          <button class="btn btn-success btn-lg">Sign Up!</button>
+          <p class="text-muted"><small>You must be over 18 to sign up for our service. Please, drink responsibly</small>
+          </p>
         </section>
+      </div>
+    </div>
 
-        <hr>
-        
-        <!-- Quotes -->
-        <section class="quotes">
-            <h2 class="text-uppercase">Quotes</h2>
-            <blockquote class="blockquote">
-                <p>I have tried many different whiskeys in they past few months</p>
-                <p>- Jane Doe</p>
-            </blockquote>
-            <blockquote class="blockquote">
-                    <p>I haven't been sober for months</p>
-                    <p>- Jane Doe</p>
-            </blockquote>
-        </section>
+    <hr>
 
-        <hr>
+    <!-- Quotes -->
+    <section class="quotes">
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <h2 class="text-uppercase">Quotes</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <blockquote class="blockquote">
+            <p>I have tried many different whiskeys in they past few months</p>
+            <p>- Jane Doe</p>
+          </blockquote>
+        </div>
+        <div class="col-12 col-md-6">
+          <blockquote class="blockquote">
+            <p>I haven't been sober for months</p>
+            <p>- Jane Doe</p>
+          </blockquote>
+        </div>
+      </div>
+    </section>
 
-        <!-- Features -->
-         <section class="features">
-            <h2 class="text-uppercase">Features</h2>
-            <div class="feature">
-                <h3>Feature 1:</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
+    <hr>
 
-            <div class="feature">
-                <h3>Feature 2:</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
+    <!-- Features -->
+    <section class="features">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="text-uppercase">Features</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="feature">
+            <h3>Feature 1:</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente
+              aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
+            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
 
-            <div class="feature">
-                <h3>Feature 3</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
+          <div class="feature">
+            <h3>Feature 2:</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente
+              aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
+            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+          </div>
+        </div>
+        <div class="col-12 d-md-none d-lg-block col-lg-4">
 
-         </section>
+          <div class="feature">
+            <h3>Feature 3</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente
+              aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
+            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+          </div>
+        </div>
+      </div>
 
-         <section class="favorites">
-            <h2 class="text-uppercase">Monthly Favorites</h2>
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Origin</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Whiskey name</td>
-                    <td>Whiskey origin</td>
-                  </tr>
-                </tbody>
-              </table>
-         </section>
+    </section>
+
+    <section class="favorites">
+      <h2 class="text-uppercase">Monthly Favorites</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Origin</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Whiskey name</td>
+            <td>Whiskey origin</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
 
 
-    </article>
+  </article>
 </body>
+
 </html>
