--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <script src="https://kit.fontawesome.com/310ea35e5d.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -15,16 +15,44 @@
 
 <body>
 
-  <article class="container">
+  <!-- Navbar -->
+  <nav class="navbar navbar-light bg-light navbar-expand-sm">
+    <a href="/" class="navbar-brand">Whiskey Drop</a>
+    <ul class="navbar-nav mr-auto">
+      <li class="active nav-item mr-2"><a href="/" class="nav-link">Home</a></li>
+      <li class="nav-item mr-2"><a href="/about" class="nav-link">About</a></li>
+      <li class="nav-item mr-2 d-block d-sm-none"><a href="/about" class="nav-link">Sign In / Sign Up</a></li>
+    </ul>
+    <div class="d-none d-sm-inline me-auto">
+      <p class="navbar-text my-auto me-2"><i>Great whiskey delivered to your door</i></p>
+      <a href="/login">Sign In / Sign Up</a>
+    </div>
+  </nav>
+
+
+  <article class="container mt-3">
+
+    <div class="row d-none d-sm-block">
+      <div class="col-12">
+        <div class="alert alert-warning">
+          <strong>Sale Now On!</strong> We've got a sale on now. Get a 12 month subscription for the price of 6!
+          <a href="">See here for details</a>
+        </div>
+      </div>
+    </div>
+
     <!-- Callout -->
     <div class="row">
       <div class="col-12">
-        <section class="callout">
+        <section class="callout m-3 p-5 bg-primary text-white text-center">
           <h1>The finest whiskeys delivered to your door</h1>
-          <p class="lead">Sign up today and start recieving the world's best whikeys. <s>£19.99</s> <strong><mark>First
-                one is free</mark></strong></p>
+          <p class="lead">Sign up today and start recieving the world's best whikeys.
+            <s class="d-none d-sm-inline">£19.99</s>
+            <span class="d-inline d-sm-none"><br></span>
+            <strong><mark>First one is free</mark></strong></p>
           <button class="btn btn-success btn-lg">Sign Up!</button>
-          <p class="text-muted"><small>You must be over 18 to sign up for our service. Please, drink responsibly</small>
+          <p class="text-muted my-2"><small>You must be over 18 to sign up for our service. Please, drink
+              responsibly</small>
           </p>
         </section>
       </div>
@@ -35,22 +63,38 @@
     <!-- Quotes -->
     <section class="quotes">
       <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 my-5">
           <h2 class="text-uppercase">Quotes</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <blockquote class="blockquote">
-            <p>I have tried many different whiskeys in they past few months</p>
-            <p>- Jane Doe</p>
-          </blockquote>
+          <div class="media">
+            <div class="d-none d-sm-block">
+              <img src="images/girl-image.png" alt="Image of a girl" class="rounded-circle mr-3" height="100"
+                width="100">
+            </div>
+            <div class="media-body">
+              <blockquote class="blockquote">
+                <p>I have tried many different whiskeys in they past few months</p>
+                <p>- Jane Doe</p>
+              </blockquote>
+            </div>
+          </div>
         </div>
+
         <div class="col-12 col-md-6">
-          <blockquote class="blockquote">
-            <p>I haven't been sober for months</p>
-            <p>- Jane Doe</p>
-          </blockquote>
+          <div class="media">
+            <div class="d-none d-sm-block">
+              <img src="images/guy-image.png" alt="Image of a guy" class="rounded-circle mr-3" height="100" width="100">
+            </div>
+            <div class="media-body">
+              <blockquote class="blockquote">
+                <p>I haven't been sober for months</p>
+                <p>- John Smith</p>
+              </blockquote>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -60,14 +104,14 @@
     <!-- Features -->
     <section class="features">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 my-5">
           <h2 class="text-uppercase">Features</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4">
           <div class="feature">
-            <h3>Feature 1:</h3>
+            <h3><i class="fa-solid fa-gift d-none d-sm-inline"></i> Feature 1: <span class="badge text-bg-success">NEW!</span></h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente
               aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
             <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
@@ -76,7 +120,7 @@
         <div class="col-12 col-md-6 col-lg-4">
 
           <div class="feature">
-            <h3>Feature 2:</h3>
+            <h3><i class="fa-solid fa-credit-card d-none d-sm-inline"></i> Feature 2:</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente
               aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
             <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
@@ -85,7 +129,7 @@
         <div class="col-12 d-md-none d-lg-block col-lg-4">
 
           <div class="feature">
-            <h3>Feature 3</h3>
+            <h3><i class="fa-solid fa-circle-xmark d-none d-sm-inline"></i> Feature 3:</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente
               aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
             <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
