--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <script src="https://kit.fontawesome.com/310ea35e5d.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-  </script>
+
   <title>Whiskey Drop | Taste a new whiskey every month!</title>
 </head>
 
@@ -18,13 +16,34 @@
   <!-- Navbar -->
   <nav class="navbar navbar-light bg-light navbar-expand-sm">
     <a href="/" class="navbar-brand">Whiskey Drop</a>
-    <ul class="navbar-nav mr-auto">
-      <li class="active nav-item mr-2"><a href="/" class="nav-link">Home</a></li>
-      <li class="nav-item mr-2"><a href="/about" class="nav-link">About</a></li>
-      <li class="nav-item mr-2 d-block d-sm-none"><a href="/about" class="nav-link">Sign In / Sign Up</a></li>
-    </ul>
-    <div class="d-none d-sm-inline me-auto">
-      <p class="navbar-text my-auto me-2"><i>Great whiskey delivered to your door</i></p>
+
+    <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span></button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav mr-auto ms-2">
+        <li class="active nav-item me-2"><a href="/" class="nav-link">Home</a></li>
+        <li class="nav-item me-2"><a href="/about" class="nav-link">About</a></li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Whiskeys</a>
+
+            <div class="dropdown-menu" aria-labelledby="navabarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Irish</a>
+              <a class="dropdown-item" href="#">Scotch</a>
+              <a class="dropdown-item" href="#">Japanese</a>
+              <a class="dropdown-item" href="#">American</a>
+            </div>
+
+        </li>
+
+        <li class="nav-item me-2 d-block d-sm-none"><a href="/about" class="nav-link">Sign In / Sign Up</a></li>
+      </ul>
+    </div>
+    <div class="d-none d-sm-inline me-0">
+      <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door</i></p>
       <a href="/login">Sign In / Sign Up</a>
     </div>
   </nav>
@@ -111,7 +130,8 @@
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4">
           <div class="feature">
-            <h3><i class="fa-solid fa-gift d-none d-sm-inline"></i> Feature 1: <span class="badge text-bg-success">NEW!</span></h3>
+            <h3><i class="fa-solid fa-gift d-none d-sm-inline"></i> Feature 1: <span
+                class="badge text-bg-success">NEW!</span></h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ullam impedit asperiores quia sapiente
               aperiam in reprehenderit explicabo voluptate totam assumenda, expedita eaque cumque dolorum.</p>
             <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
@@ -159,6 +179,11 @@
 
 
   </article>
+
+  <!-- bootstrap js -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
